--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+,bg-custom {
+    background-image: url('./pages/pics/bitcoin-cryptocurrency-black-background-3840x2160-952.jpg');
+    background-size: cover;
+    background-position: center;
+}
